# Data-Analyze

./: .pre-commit-config.yaml
backend/django_backend/: .gitignore  README.md  db.sqlite3  env.md  init.sql  llm_provider_factory.py  manage.py  pyproject.toml  requirements.txt  topklogsystem.py
backend/django_backend/config/: available_local_models.json  generate_llm_config.py  generate_local_model.py  llm_config.yaml  response_template.md  system_prompt.yaml
backend/django_backend/data/log/: java_error_deepseek.csv  linuxcomand_error_deepseek.csv  python_error_deepseek.csv  python_error_doubao.csv
backend/django_backend/data/log/from_kaggle/: Computer_events.csv  Computer_events_column_reduced.csv
backend/django_backend/data/vector_stores/fd061b68-975c-432d-ad78-cce2fb42a12d/: index_metadata.pickle
backend/django_backend/deepseek_api/: api.py  apps.py  models.py  schemas.py  services.py
backend/django_backend/deepseek_api/management/commands/: initdb.py
backend/django_backend/deepseek_api/migrations/: 0001_initial.py  0002_userllmpreference.py  0003_api_tokens_and_session_user_username.py  0004_conversationsession_swap_username_to_user.py  0005_externalllmapi.py  0006_history_session.py
backend/django_backend/deepseek_project/: asgi.py  settings.py  wsgi.py
frontend/vue_frontend/: openapi.json  openapi.yaml  package-lock.json  package.json
frontend/vue_frontend/src/: App.vue  api.js  router.js  store.js
frontend/vue_frontend/src/api/: client.js  index.js  llm.js  sessions.js  users.js
frontend/vue_frontend/src/components/: ChatArea.vue  ChatInput.vue  ChatMessage.vue  MessageInput.vue  SessionList.vue  SideBar.vue
frontend/vue_frontend/src/stores/: app.js  auth.js  chat.js  model.js
(+2 files in other folders)
